# pamacy

./: .env  Cargo.toml
migrations/: 20220429010542_pamacy.sql
src/: bill.rs  database.rs  main.rs  manage.rs
templates/: base.html  customer.html  finance.html  index.html  manage.html  new_bill.html  staff.html
templates/bill/: bills.html  new_bill.html
templates/manage/: js.html  manage.html  medicine_add_form.html  medicine_edit_form.html
