[package]
name = "pamacy"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
tide = "0.16.0"
tera = "1.15.0"
tide-tera = "0.2.4"
once_cell = "1.12.0" 
sqlx = {version = "0.5.13", features = ["runtime-async-std-rustls", "postgres", "chrono"]}
anyhow = "1.0.57"
dotenv = "0.15.0"
serde = "1.0.137"
serde_json = "1.0.81"
rand = "0.8.5"
base64 = "0.13.0"
chrono = "0.4.19"
async-trait = "0.1.56"
